fix: TextInput overflow

--- a/src/ui/components/common/textInput/styles.module.scss
+++ b/src/ui/components/common/textInput/styles.module.scss
@@ -12,6 +12,7 @@
     .input {
       width: 100%;
       resize: none;
+      overflow: none;
       margin: 2px 0 0 0;
       padding: 14px;
       
